Eleventy Migration - Main nav is no longer sticky on small screens

--- a/src/styles/components/_navigation.scss
+++ b/src/styles/components/_navigation.scss
@@ -78,4 +78,9 @@
   .menu-container {
     flex-direction: column;
   }
+
+  // On mobile main nav will not be sticky
+  .main-navigation {
+    position: relative;
+  }
 }
